triton_backend_sys/src/bindings.rs

extern "C" {
    #[doc = " Get the error code.\n\n \\param error The error object.\n \\return The error code."]
    pub fn TRITONSERVER_ErrorCode(error: *mut TRITONSERVER_Error) -> TRITONSERVER_Error_Code;
}
extern "C" {
    #[doc = " Get the string representation of an error code. The returned\n string is not owned by the caller and so should not be modified or\n freed. The lifetime of the returned string extends only as long as\n 'error' and must not be accessed once 'error' is deleted.\n\n \\param error The error object.\n \\return The string representation of the error code."]
    pub fn TRITONSERVER_ErrorCodeString(
        error: *mut TRITONSERVER_Error,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Get the error message. The returned string is not owned by the\n caller and so should not be modified or freed. The lifetime of the\n returned string extends only as long as 'error' and must not be\n accessed once 'error' is deleted.\n\n \\param error The error object.\n \\return The error message."]
    pub fn TRITONSERVER_ErrorMessage(
        error: *mut TRITONSERVER_Error,
    ) -> *const ::std::os::raw::c_char;
}
#[doc = " Type for allocation function that allocates a buffer to hold an\n output tensor.\n\n \\param allocator The allocator that is provided in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param tensor_name The name of the output tensor to allocate for.\n \\param byte_size The size of the buffer to allocate.\n \\param memory_type The type of memory that the caller prefers for\n the buffer allocation.\n \\param memory_type_id The ID of the memory that the caller prefers\n for the buffer allocation.\n \\param userp The user data pointer that is provided as\n 'response_allocator_userp' in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param buffer Returns a pointer to the allocated memory.\n \\param buffer_userp Returns a user-specified value to associate\n with the buffer, or nullptr if no user-specified value should be\n associated with the buffer. This value will be provided in the\n call to TRITONSERVER_ResponseAllocatorReleaseFn_t when the buffer\n is released and will also be returned by\n TRITONSERVER_InferenceResponseOutput.\n \\param actual_memory_type Returns the type of memory where the\n allocation resides. May be different than the type of memory\n requested by 'memory_type'.\n \\param actual_memory_type_id Returns the ID of the memory where\n the allocation resides. May be different than the ID of the memory\n requested by 'memory_type_id'.\n \\return a TRITONSERVER_Error object if a failure occurs while\n attempting an allocation. If an error is returned all other return\n values will be ignored."]
pub type TRITONSERVER_ResponseAllocatorAllocFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        tensor_name: *const ::std::os::raw::c_char,
        byte_size: usize,
        memory_type: TRITONSERVER_MemoryType,
        memory_type_id: i64,
        userp: *mut ::std::os::raw::c_void,
        buffer: *mut *mut ::std::os::raw::c_void,
        buffer_userp: *mut *mut ::std::os::raw::c_void,
        actual_memory_type: *mut TRITONSERVER_MemoryType,
        actual_memory_type_id: *mut i64,
    ) -> *mut TRITONSERVER_Error,
>;
#[doc = " Type for allocation function that allocates a buffer to hold an\n output tensor with buffer attributes. The callback function must fill in the\n appropriate buffer attributes information related to this buffer. If set,\n this function is always called after TRITONSERVER_ResponseAllocatorAllocFn_t\n function.\n\n \\param allocator The allocator that is provided in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param tensor_name The name of the output tensor to allocate for.\n \\param buffer_attributes The buffer attributes associated with the buffer.\n \\param userp The user data pointer that is provided as\n 'response_allocator_userp' in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param buffer_userp Returns a user-specified value to associate\n with the buffer, or nullptr if no user-specified value should be\n associated with the buffer. This value will be provided in the\n call to TRITONSERVER_ResponseAllocatorReleaseFn_t when the buffer\n is released and will also be returned by\n TRITONSERVER_InferenceResponseOutput.\n \\return a TRITONSERVER_Error object if a failure occurs while\n attempting an allocation. If an error is returned all other return\n values will be ignored."]
pub type TRITONSERVER_ResponseAllocatorBufferAttributesFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        tensor_name: *const ::std::os::raw::c_char,
        buffer_attributes: *mut TRITONSERVER_BufferAttributes,
        userp: *mut ::std::os::raw::c_void,
        buffer_userp: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error,
>;
#[doc = " Type for function that is called to query the allocator's preferred memory\n type and memory type ID. As much as possible, the allocator should attempt\n to return the same memory_type and memory_type_id values that will be\n returned by the subsequent call to TRITONSERVER_ResponseAllocatorAllocFn_t.\n But the allocator is not required to do so.\n\n \\param allocator The allocator that is provided in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param userp The user data pointer that is provided as\n 'response_allocator_userp' in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param tensor_name The name of the output tensor. This is optional\n and it should be set to nullptr to indicate that the tensor name has\n not determined.\n \\param byte_size The expected size of the buffer. This is optional\n and it should be set to nullptr to indicate that the byte size has\n not determined.\n \\param memory_type Acts as both input and output. On input gives\n the memory type preferred by the caller. Returns memory type preferred\n by the allocator, taken account of the caller preferred type.\n \\param memory_type_id Acts as both input and output. On input gives\n the memory type ID preferred by the caller. Returns memory type ID preferred\n by the allocator, taken account of the caller preferred type ID.\n \\return a TRITONSERVER_Error object if a failure occurs."]
pub type TRITONSERVER_ResponseAllocatorQueryFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        userp: *mut ::std::os::raw::c_void,
        tensor_name: *const ::std::os::raw::c_char,
        byte_size: *mut usize,
        memory_type: *mut TRITONSERVER_MemoryType,
        memory_type_id: *mut i64,
    ) -> *mut TRITONSERVER_Error,
>;
#[doc = " Type for function that is called when the server no longer holds\n any reference to a buffer allocated by\n TRITONSERVER_ResponseAllocatorAllocFn_t. In practice this function\n is typically called when the response object associated with the\n buffer is deleted by TRITONSERVER_InferenceResponseDelete.\n\n \\param allocator The allocator that is provided in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param buffer Pointer to the buffer to be freed.\n \\param buffer_userp The user-specified value associated\n with the buffer in TRITONSERVER_ResponseAllocatorAllocFn_t.\n \\param byte_size The size of the buffer.\n \\param memory_type The type of memory holding the buffer.\n \\param memory_type_id The ID of the memory holding the buffer.\n \\return a TRITONSERVER_Error object if a failure occurs while\n attempting the release. If an error is returned Triton will not\n attempt to release the buffer again."]
pub type TRITONSERVER_ResponseAllocatorReleaseFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        buffer: *mut ::std::os::raw::c_void,
        buffer_userp: *mut ::std::os::raw::c_void,
        byte_size: usize,
        memory_type: TRITONSERVER_MemoryType,
        memory_type_id: i64,
    ) -> *mut TRITONSERVER_Error,
>;
#[doc = " Type for function that is called to indicate that subsequent\n allocation requests will refer to a new response.\n\n \\param allocator The allocator that is provided in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\param userp The user data pointer that is provided as\n 'response_allocator_userp' in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n \\return a TRITONSERVER_Error object if a failure occurs."]
pub type TRITONSERVER_ResponseAllocatorStartFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        userp: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error,
>;
extern "C" {
    #[doc = " Create a new response allocator object.\n\n The response allocator object is used by Triton to allocate\n buffers to hold the output tensors in inference responses. Most\n models generate a single response for each inference request\n (TRITONSERVER_TXN_ONE_TO_ONE). For these models the order of\n callbacks will be:\n\n   TRITONSERVER_ServerInferAsync called\n    - start_fn : optional (and typically not required)\n    - alloc_fn : called once for each output tensor in response\n   TRITONSERVER_InferenceResponseDelete called\n    - release_fn: called once for each output tensor in response\n\n For models that generate multiple responses for each inference\n request (TRITONSERVER_TXN_DECOUPLED), the start_fn callback can be\n used to determine sets of alloc_fn callbacks that belong to the\n same response:\n\n   TRITONSERVER_ServerInferAsync called\n    - start_fn\n    - alloc_fn : called once for each output tensor in response\n    - start_fn\n    - alloc_fn : called once for each output tensor in response\n      ...\n   For each response, TRITONSERVER_InferenceResponseDelete called\n    - release_fn: called once for each output tensor in the response\n\n In all cases the start_fn, alloc_fn and release_fn callback\n functions must be thread-safe. Typically making these functions\n thread-safe does not require explicit locking. The recommended way\n to implement these functions is to have each inference request\n provide a 'response_allocator_userp' object that is unique to that\n request with TRITONSERVER_InferenceRequestSetResponseCallback. The\n callback functions then operate only on this unique state. Locking\n is required only when the callback function needs to access state\n that is shared across inference requests (for example, a common\n allocation pool).\n\n \\param allocator Returns the new response allocator object.\n \\param alloc_fn The function to call to allocate buffers for result\n tensors.\n \\param release_fn The function to call when the server no longer\n holds a reference to an allocated buffer.\n \\param start_fn The function to call to indicate that the\n subsequent 'alloc_fn' calls are for a new response. This callback\n is optional (use nullptr to indicate that it should not be\n invoked).\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ResponseAllocatorNew(
        allocator: *mut *mut TRITONSERVER_ResponseAllocator,
        alloc_fn: TRITONSERVER_ResponseAllocatorAllocFn_t,
        release_fn: TRITONSERVER_ResponseAllocatorReleaseFn_t,
        start_fn: TRITONSERVER_ResponseAllocatorStartFn_t,
    ) -> *mut TRITONSERVER_Error;
}
